2007-03-19  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am:
	* gnome-keybinding-properties.c: (reload_key_entries):
	Fix the path from which we'd load the keybindings

2007-02-19  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keybinding-properties.c: (clear_old_model): clear GConf client
	cache before reloading since cached values don't pass the schema name
	along which can make entries vanish from the list (fixes bug 394776)

2007-02-08  Mariano Su?rez-Alvarez  <mariano@gnome.org>

	* gnome-keybinding-properties.c (metacity_key_list): added 
	gconf:/apps/metacity/global_keybindings/cycle_group

2007-02-07  Mariano Su?rez-Alvarez  <mariano@gnome.org>

	* gnome-keybinding-properties.c (clear_old_model, reload_key_entries,
	cb_dialog_response, setup_dialog, main): organize the way things a cleared
	at exit time so as to avoid warnings. (fixes bug 405175)

2007-02-04  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keybinding-properties.c: (keyentry_sort_func),
	(clear_old_model), (setup_dialog): clean up sorting to not use an
	imaginary column; change accel sort order to move disabled actions
	to the back of the list and also speed up sorting a bit

2007-02-04  Jens Granseuer  <jensgr@gmx.net>

	* eggaccelerators.c: (egg_virtual_accelerator_name),
	(egg_virtual_accelerator_label):
	* eggaccelerators.h:
	* eggcellrendererkeys.c: (convert_keysym_state_to_string):
	* gnome-keybinding-properties.c: (binding_name),
	(accel_edited_callback): support localized key names (interim fix
	for #145346)

2007-02-03  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keybinding-properties.c: (accel_edited_callback): filter
	out CapsLock modifiers since it's otherwise possible to set the
	same accel for several actions (fixes #350424)

2007-02-02  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keybinding-properties.c: (accel_edited_callback): blacklist
	numbers, space, and tab as accels (fixes #359092)

2007-01-31  Jens Granseuer  <jensgr@gmx.net>
